crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@nested_computed_member_expression.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/nested_computed_member_expression.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "return <value>" ]
    4 [ label = "unreachable" ]
    5 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    3 -> 2 [ label = "Error(Implicit)" ]
    1 -> 3 [ label = "NewFunction" ]
    4 -> 2 [ label = "Error(Implicit)" , style = "dotted" ]
    3 -> 4 [ label = "Unreachable" , style = "dotted" ]
    5 -> 0 [ label = "Error(Implicit)" ]
    1 -> 5 [ label = "Normal" ]
}
