crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@switch_in_while.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/switch_in_while.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "WhileStatement" ]
    2 [ label = "" ]
    3 [ label = "BlockStatement\nSwitchStatement" ]
    4 [ label = "" ]
    5 [ label = "ExpressionStatement\ncontinue" ]
    6 [ label = "unreachable" ]
    7 [ label = "" ]
    8 [ label = "ExpressionStatement" ]
    9 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    2 -> 0 [ label = "Error(Implicit)" ]
    3 -> 0 [ label = "Error(Implicit)" ]
    4 -> 0 [ label = "Error(Implicit)" ]
    5 -> 0 [ label = "Error(Implicit)" ]
    4 -> 5 [ label = "Normal" ]
    6 -> 0 [ label = "Error(Implicit)" ]
    5 -> 6 [ label = "Unreachable" , style = "dotted" ]
    7 -> 0 [ label = "Error(Implicit)" ]
    8 -> 0 [ label = "Error(Implicit)" ]
    7 -> 8 [ label = "Normal" ]
    4 -> 7 [ label = "Normal" ]
    6 -> 7 [ label = "Normal" ]
    3 -> 4 [ label = "Normal" ]
    3 -> 7 [ label = "Normal" ]
    7 -> 8 [ label = "Normal" ]
    9 -> 0 [ label = "Error(Implicit)" ]
    1 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    8 -> 2 [ label = "Backedge" ]
    2 -> 9 [ label = "Normal" ]
    5 -> 2 [ label = "Jump" ]
}
