crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@switch_statement.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/switch_statement.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "SwitchStatement" ]
    2 [ label = "" ]
    3 [ label = "ExpressionStatement" ]
    4 [ label = "unreachable\nbreak" ]
    5 [ label = "" ]
    6 [ label = "ExpressionStatement" ]
    7 [ label = "" ]
    8 [ label = "ExpressionStatement" ]
    9 [ label = "unreachable\nbreak" ]
    10 [ label = "" ]
    11 [ label = "BlockStatement\nExpressionStatement\nVariableDeclaration\nExpressionStatement\nreturn <value>" ]
    12 [ label = "unreachable" ]
    13 [ label = "" ]
    14 [ label = "ExpressionStatement\nExpressionStatement\nExpressionStatement" ]
    15 [ label = "" ]
    16 [ label = "ExpressionStatement\nreturn <value>" ]
    17 [ label = "unreachable\nExpressionStatement\nreturn <value>" ]
    18 [ label = "unreachable" ]
    19 [ label = "" ]
    0 -> 1 [ label = NewFunction ]
    2 -> 3 [ label = Normal ]
    3 -> 4 [ label = Unreachable , style = "dotted" ]
    3 -> 4 [ label = Normal ]
    5 -> 6 [ label = Normal ]
    7 -> 8 [ label = Normal ]
    8 -> 9 [ label = Unreachable , style = "dotted" ]
    8 -> 9 [ label = Normal ]
    10 -> 11 [ label = Normal ]
    11 -> 12 [ label = Unreachable , style = "dotted" ]
    13 -> 14 [ label = Normal ]
    15 -> 16 [ label = Normal ]
    16 -> 17 [ label = Unreachable , style = "dotted" ]
    2 -> 5 [ label = Normal ]
    2 -> 7 [ label = Normal ]
    2 -> 10 [ label = Normal ]
    2 -> 13 [ label = Normal ]
    2 -> 15 [ label = Normal ]
    4 -> 5 [ label = Normal ]
    1 -> 2 [ label = Normal ]
    5 -> 7 [ label = Normal ]
    5 -> 10 [ label = Normal ]
    5 -> 13 [ label = Normal ]
    5 -> 15 [ label = Normal ]
    6 -> 7 [ label = Normal ]
    1 -> 5 [ label = Normal ]
    7 -> 10 [ label = Normal ]
    7 -> 13 [ label = Normal ]
    7 -> 15 [ label = Normal ]
    9 -> 10 [ label = Normal ]
    1 -> 7 [ label = Normal ]
    10 -> 13 [ label = Normal ]
    10 -> 15 [ label = Normal ]
    12 -> 13 [ label = Normal ]
    1 -> 10 [ label = Normal ]
    13 -> 15 [ label = Normal ]
    14 -> 15 [ label = Normal ]
    1 -> 13 [ label = Normal ]
    1 -> 15 [ label = Normal ]
    15 -> 17 [ label = Normal ]
    17 -> 18 [ label = Unreachable , style = "dotted" ]
    0 -> 19 [ label = Normal ]
}
